# Code_crafters

./: CMakeLists.txt  Makefile  README.md  aichat.txt  client.c  index.html  main.c  script.js  server.c  style.css
include/: auth.h  crdt.h  editor.h  network.h  persistence.h  sync.h  ui.h  utils.h
src/: auth.c  crdt.c  main.c  network.c  persistence.c  sync.c  ui.c  utils.c
